<resources>
  <string name="app_name">MNSA Geolocation</string>
  <string name="title_home">Home</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>
  <string name="overview_title">History</string>
  <string name="details_title">Report details</string>
  <string name="details_button">Details</string>
  <string name="location_formatted">%1$s / %2$s (%3$s m)</string>
  <string name="dialog_required_permission_title">Required permissions</string>
  <string name="dialog_required_permission_message">In order to deliver a supreme user-experience, the application needs to have access to your location.</string>
  <string name="dialog_required_permission_ok">OK</string>
  <string name="menu_settings_change_key">Settings</string>
  <string name="delete_report">Delete Report</string>
  <string name="dialog_delete_title">Confirm delete</string>
  <string name="dialog_delete_message">Delete this report? Deleted reports can\'t be retrieved.</string>
  <string name="dialog_delete_positive">Delete</string>
  <string name="dialog_delete_negative">Cancel</string>
  <string name="new_report_snackbar_msg">New report generated</string>
  <string name="new_report_snackbar_action">View</string>
  <string name="overview_card_text">Geolocation with a difference of %1$s meters between the actual and the determined position.</string>
  <string name="key_info_tv">Key Information</string>
  <string name="cell_towers_tv">Cell Towers</string>
  <string name="access_points_tv">WiFi Access Points</string>
  <string name="detail_subscript_time">Time</string>
  <string name="detail_subscript_actual_location">GPS location</string>
  <string name="detail_subscript_measured_location">Determined geolocation</string>
  <string name="detail_subscript_acc_diff">Position difference</string>
  <string name="accuracy_difference">%1$s m</string>
  <string name="generation_error">Error: Report could not be generated</string>
  <string name="column_cellId">ID</string>
  <string name="column_cellType">Type</string>
  <string name="column_countryCode">CC</string>
  <string name="column_networkId">NID</string>
  <string name="column_location_area_code">LAC</string>
  <string name="column_strength">Str</string>
  <string name="column_strength_full">Strength</string>
  <string name="column_address">Address</string>
  <string name="column_frequency">Frequency</string>
  <string name="file_access_error">Could not create temporary file</string>

  <!-- Report txt template-->
  <string name="txt_title">Geolocation report from %1$s</string>
  <string name="txt_gps_loc">Device\'s GPS location: %1$s / %2$s (Accuracy: %3$s m)</string>
  <string name="txt_meas_loc">Device\'s location based on network information : %1$s / %2$s (Accuracy: %3$s m)</string>
  <string name="txt_diff">Difference between actual and determined location: %1$s m</string>
</resources>
