<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="horizontal"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingStart="@dimen/md_keylines"
  android:paddingEnd="@dimen/md_keylines"
  android:paddingBottom="@dimen/md_keylines">

  <android.support.v7.widget.AppCompatTextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:textAlignment="gravity"
    android:gravity="start"
    android:text="@string/column_cellId" />

  <android.support.v7.widget.AppCompatTextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:textAlignment="gravity"
    android:gravity="end"
    android:text="@string/column_cellType" />

  <android.support.v7.widget.AppCompatTextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:textAlignment="gravity"
    android:gravity="end"
    android:text="@string/column_countryCode" />

  <android.support.v7.widget.AppCompatTextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:textAlignment="gravity"
    android:gravity="end"
    android:text="@string/column_networkId" />

  <android.support.v7.widget.AppCompatTextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:textAlignment="gravity"
    android:gravity="end"
    android:text="@string/column_location_area_code" />

  <android.support.v7.widget.AppCompatTextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:textAlignment="gravity"
    android:gravity="end"
    android:text="@string/column_strength" />

</LinearLayout>