<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_gravity="center"
  android:layout_marginTop="@dimen/md_keylines"
  android:layout_marginLeft="@dimen/md_keylines"
  android:layout_marginRight="@dimen/md_keylines"
  app:cardElevation="@dimen/card_elevation_rest"
  app:cardMaxElevation="@dimen/card_elevation_picked"
  android:foreground="?attr/selectableItemBackground"
  android:focusable="true">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.AppCompatImageView
      android:id="@+id/cardImage"
      android:layout_width="match_parent"
      android:layout_height="@dimen/card_image_height"
      android:scaleType="centerCrop" />

    <View
      android:layout_width="match_parent"
      android:layout_height="@dimen/card_image_height"
      android:layout_gravity="bottom"
      android:layout_alignBottom="@+id/cardImage"
      android:background="@drawable/shape" />

    <android.support.v7.widget.AppCompatTextView
      android:id="@+id/cardTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@id/cardImage"
      android:textAppearance="@style/TextAppearance.AppCompat.Title"
      android:padding="@dimen/md_keylines"
      android:textColor="@color/white"
      tools:text="Date: 06 January 2018" />

    <android.support.v7.widget.AppCompatTextView
      android:id="@+id/measurementAccuracyDifferenceTv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/cardTitle"
      android:padding="@dimen/md_keylines"
      android:text="@string/overview_card_text" />

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_below="@+id/measurementAccuracyDifferenceTv"
      android:background="@color/light_grey" />

    <android.support.v7.widget.AppCompatButton
      android:id="@+id/details_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/measurementAccuracyDifferenceTv"
      style="?android:attr/borderlessButtonStyle"
      android:textColor="?attr/colorAccent"
      android:text="@string/details_button" />

    <android.support.v7.widget.AppCompatButton
      android:id="@+id/delete_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/measurementAccuracyDifferenceTv"
      android:layout_toEndOf="@id/details_button"
      style="?android:attr/borderlessButtonStyle"
      android:textColor="@color/button_grey"
      android:text="@string/dialog_delete_positive" />
  </RelativeLayout>
</android.support.v7.widget.CardView>